# susy-snappy

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
snappy-sys/: Cargo.toml
snappy-sys/snappy/: COPYING  snappy-c.cc  snappy-c.h  snappy-internal.h  snappy-sinksource.cc  snappy-sinksource.h  snappy-stubs-internal.cc  snappy-stubs-internal.h  snappy-stubs-public.h.in  snappy-test.cc  snappy-test.h  snappy.cc  snappy.h  snappy_unittest.cc
snappy-sys/snappy/testdata/: alice29.txt  asyoulik.txt  baddata1.snappy  baddata2.snappy  baddata3.snappy  html  html_x_4  lcet10.txt  plrabn12.txt  urls.10K
snappy-sys/src/: lib.rs
src/: lib.rs
